[project]
name = "langgraph-code-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "langchain-huggingface>=1.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.4",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
]
