[project]
name = "langgraph-code-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langgraph>=1.0.5",
    "mcp>=1.24.0",
]
